--- a/GikBrains/style.css
+++ b/GikBrains/style.css
@@ -13,11 +13,17 @@ body {
     list-style-type: none
 }
 
-h1,
-h3,
-    {
+#podrobno,
+#kratko {
     color: black;
     font-size: 18px;
     font-weight: 400;
     background-color: #eaeaea
+}
+
+h2 {
+    color: #707070;
+    font-size: 14px;
+    font-style: italic;
+    line-height: 16px
 }
